--- a/README.org
+++ b/README.org
@@ -1,6 +1,12 @@
 #+OPTIONS: broken-links:mark
 * FXRuby Enhancement Table of Contents                             :TOC_5_gh:
  - [[#fxruby-enhancement][fxruby-enhancement]]
+   - [[#showcase][Showcase]]
+     - [[#hello-world][Hello World]]
+     - [[#bounce-animation][Bounce Animation]]
+     - [[#data-target][Data Target]]
+     - [[#dialog-box][Dialog Box]]
+     - [[#scribble][Scribble]]
    - [[#introduction][Introduction]]
    - [[#installation][Installation]]
    - [[#documentation][Documentation]]
@@ -51,6 +57,15 @@
   [[./examples/images/hello-world-new-and-old.png]]
   - On the left: Enhancement version of hello world.
   - On the right: FXRuby version.
+** Showcase
+*** Hello World
+    | [[./examples/images/hello.rb.png]]  | [[file:./examples/hello.rb][Hello World example]] |
+    | [[./examples/images/bounce.rb.png]] | [[file:./examples/bounce.rb][Bounce example]]      |
+
+*** Bounce Animation
+*** Data Target
+*** Dialog Box
+*** Scribble
 ** Introduction
    The fxruby library is an excellent wrapper for the FOX Toolkit.
    However, it reflects the C++-ness of FOX, rather than being more
