--- a/README.org
+++ b/README.org
@@ -58,7 +58,7 @@
    | [[./examples/images/hello.rb.png]]      | [[file:./examples/hello.rb][Hello World]] |
    | [[./examples/images/dialog_box.rb.png]] | [[file:,/examples/dialog_box.rb][Dialog Box]]  |
    | [[./examples/images/bounce.rb.png]]     | [[file:./examples/bounce.rb][Bounce]]      |
-   | [[./examples/images/scribble.rb.png]]   | [[file:./examples/scribble.rb][Scribblee]]   |
+   | [[./examples/images/scribble.rb.png]]   | [[file:./examples/scribble.rb][Scribble]]    |
    | [[./examples/images/chart.rb.png]]      | [[file:./examples/chart.rb][Chart]]       |
 
 ** Introduction
